0725 新增php 食記首頁+hot改從資料庫抓資料

--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -83,32 +83,32 @@
         <div class="row p-0 title">
             <div class="col-8 p-0">
                 <div class="height500">
-                    <img src="../images/bbq/hutong.jpg" class="img-fluid">
+                    <img src="" class="img-fluid newTitle">
                     <div class="text-con">
-                        <p class="ellipsis">胡同燒肉-燒肉食材新鮮就是王道，還有專人代烤、貼心解說服務，讓人怎能不愛呢。</p>
+                        <p class="ellipsis title" id="title1"></p>
                         <p></p>
-                        <p class="latestDate-1">2024/7/14</p>
+                        <p class="latestDate-1" id="date1"></p>
                     </div>
                 </div>
             </div>
             <div class="col-4 row p-0">
                 <div class="col-12">
                     <div class="img-con">
-                        <img src="../images/dessert/shichu.jpg">
+                        <img src="" class="newTitle">
                         <div class="text-con">
-                            <p class="ellipsis">蒔初甜點五權店:清新可愛綠葡萄戚風蛋糕</p>
+                            <p class="ellipsis title" id="title2"></p>
                             <p></p>
-                            <p class="latestDate-1">2024/6/30</p>
+                            <p class="latestDate-1"id="date2"></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="img-con">
-                        <img src="../images/izakaya/woliu.jpeg">
+                        <img src="" class="newTitle">
                         <div class="text-con">
-                            <p class="ellipsis">台中我流精緻烤物WOLIU 吃的很精緻 價格卻很平實</p>
+                            <p class="ellipsis title" id="title3"></p>
                             <p></p>
-                            <p class="latestDate-1">2024/6/15</p>
+                            <p class="latestDate-1" id="date3"></p>
                         </div>
                     </div>
                 </div>
@@ -155,19 +155,19 @@
             <!-- 側邊欄 -->
             <div class="col-3 custom-ul sticky-top">
                 <div class="mb-2 mt-3 ">
-                    <img src="../images/other/hot.png" alt="" >
+                    <img src="../images/other/hot.png" alt="" id="hot">
                     <li>本週熱門</li>
                 </div>
                 <div class="mb-2 ">
-                    <img src="../images/other/hotpot.png" alt="">
+                    <img src="../images/other/hotpot.png" alt="" id="hotpot">
                     <li>火鍋</li>
                 </div>
                 <div class="mb-2">
-                    <img src="../images/other/barbecue.png" alt="">
+                    <img src="../images/other/barbecue.png" alt="" id="bbq">
                     <li>燒肉</li>
                 </div>
                 <div class="mb-2"> 
-                    <img src="../images/other/ramen.png" alt="">
+                    <img src="../images/other/ramen.png" alt="" id="ramen">
                     <li>拉麵</li>
                 </div>
                 <div class="mb-2">
@@ -187,7 +187,7 @@
                         <div class="card overflow-hidden" > 
                             <div class="card-body p-0">
                                 <!-- <a href="./demoHotpot.html"> -->
-                                    <img src="../images/hotpot/qinghj.jpg" alt="" class="img-fluid notesImage" >
+                                    <img src="" alt="" class="img-fluid notesImage" >
                                 <!-- </a> -->
                             </div>
                             <div class="card-footer align-items-center">
@@ -205,7 +205,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/bbq/kodo.png" alt="" class="img-fluid  notesImage">
+                                <img src="" alt="" class="img-fluid  notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">全程專人代烤壽星優惠95折，KODO和牛燒肉</p>
@@ -221,7 +221,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/bbq/fengjian.jpeg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">【台中-南屯區】燒肉風間｜套餐份量超多，桌邊服務超讚的啦</p>
@@ -237,7 +237,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/dessert/erlin.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">甜點秘境「貳林工作室」，必嚐ig爆紅「芋泥抹茶戚風三明治」超美味又超好拍！</p>
@@ -253,7 +253,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/ramen/xuanri.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">懸日拉麵｜以水果入湯頭，主打新潮系的精緻創意拉麵店</p>
@@ -269,7 +269,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/ramen/shouren.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">MEN monster 挺有意思的香料拉麵，味道濃郁，但口感清爽充滿衝突的特色拉麵</p>
@@ -285,7 +285,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/hotpot/roudd.png" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">【台中西區】肉多多火鍋（台中廣三店）CP值超高的平價吃到飽火鍋 會員免費送肉</p>
@@ -301,7 +301,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/dessert/liyu.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">台中西區│離域Cafe-老宅咖啡館，多了新品千層酥的選擇，審計新村附近甜點咖啡美食推薦</p>
@@ -317,7 +317,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/izakaya/xiaoms_qinmei.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">【台中食記】西區近科博館老宅改建〔 小麥所居酒屋 〕台日結合創意料理，高人氣聚餐地點，深夜食堂好所在。</p>
@@ -333,7 +333,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/hotpot/yuemc.jpg" alt="" class="img-fluid  notesImage">
+                                <img src="" alt="" class="img-fluid  notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">月暮藏涮涮鍋 |台中西屯活體海鮮、日本和牛，浮誇貴氣裝潢+個人火鍋套餐499元起</p>
@@ -349,7 +349,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/dessert/overture.jpg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">【台中甜點推薦】Overture序曲 千層蛋糕水果蛋糕IG網美人氣名店！</p>
@@ -365,7 +365,7 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="../images/hotpot/tangzhan.jpeg" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle">台中火鍋-湯棧 公益店，麻油雞鍋、剝皮辣椒鍋 營業到凌晨二點冷冬宵夜首選</p>
