0725 第二版 食記首頁的照片+文字移除寫死的程式

--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -191,11 +191,11 @@
                                 <!-- </a> -->
                             </div>
                             <div class="card-footer align-items-center">
-                                <p class="ellipsis notesTitle">【台中】青花驕麻辣鍋(崇德店)王品集團麻辣鍋、酸菜白肉鍋火鍋餐廳 牛三拼盛宴比臉大氣勢十足</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202489</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -208,11 +208,11 @@
                                 <img src="" alt="" class="img-fluid  notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">全程專人代烤壽星優惠95折，KODO和牛燒肉</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202377</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -224,11 +224,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">【台中-南屯區】燒肉風間｜套餐份量超多，桌邊服務超讚的啦</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202256</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -240,11 +240,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">甜點秘境「貳林工作室」，必嚐ig爆紅「芋泥抹茶戚風三明治」超美味又超好拍！</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202203</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -256,11 +256,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">懸日拉麵｜以水果入湯頭，主打新潮系的精緻創意拉麵店</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202189</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -272,11 +272,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">MEN monster 挺有意思的香料拉麵，味道濃郁，但口感清爽充滿衝突的特色拉麵</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202138</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -288,11 +288,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">【台中西區】肉多多火鍋（台中廣三店）CP值超高的平價吃到飽火鍋 會員免費送肉</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202076</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -304,11 +304,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">台中西區│離域Cafe-老宅咖啡館，多了新品千層酥的選擇，審計新村附近甜點咖啡美食推薦</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">202010</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -320,11 +320,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">【台中食記】西區近科博館老宅改建〔 小麥所居酒屋 〕台日結合創意料理，高人氣聚餐地點，深夜食堂好所在。</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">201989</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -336,11 +336,11 @@
                                 <img src="" alt="" class="img-fluid  notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">月暮藏涮涮鍋 |台中西屯活體海鮮、日本和牛，浮誇貴氣裝潢+個人火鍋套餐499元起</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">201956</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -352,11 +352,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">【台中甜點推薦】Overture序曲 千層蛋糕水果蛋糕IG網美人氣名店！</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">201907</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
@@ -368,11 +368,11 @@
                                 <img src="" alt="" class="img-fluid notesImage">
                             </div>
                             <div class="card-footer">
-                                <p class="ellipsis notesTitle">台中火鍋-湯棧 公益店，麻油雞鍋、剝皮辣椒鍋 營業到凌晨二點冷冬宵夜首選</p>
+                                <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
                                         <img src="../images/other/eye.png" alt="">
-                                        <p class="m-0 viewNumber">201896</p>
+                                        <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
                             </div>
