fixed chech price bug

--- a/Swallab/backstage/management_menu1.html
+++ b/Swallab/backstage/management_menu1.html
@@ -51,7 +51,7 @@
                             <div class="col-4">
                                 <h5>餐點分類 : </h5>
                                 <select id="className1" name="menuList1">
-                                    <option value="" disabled selected>請選擇...(動態)</option>
+                                    <option value="" disabled selected>請選擇...</option>
                                     <option value="signature">招牌餐點</option>
                                     <option value="individual">個人即享餐</option>
                                 </select>
@@ -59,7 +59,7 @@
                             <div class="col-4">
                                 <h5>餐點名稱 : </h5>
                                 <select id="mealName1" name="menuName1">
-                                    <option value="" disabled selected>請選擇...(動態)</option>
+                                    <option value="" disabled selected>請選擇...</option>
                                     <option value="signature">招牌餐點</option>
                                     <option value="individual">個人即享餐</option>
                                 </select>
