修改路徑和移出js

--- a/Swallab/restaurant/dessert.html
+++ b/Swallab/restaurant/dessert.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>餐廳首頁</title>
     <link rel="stylesheet" href="./../css/bootstrap.css">
-    <link rel="stylesheet" href="./../css/restaurant.css">
+    <link rel="stylesheet" href="./../css/restaurantxi.css">
 </head>
 <body>
     <header>
-        <div class="container-md">
+        <div class="container">
             <div class="row ">
                 <div class="col-6">
                     <img src="./image/大專logo.png" style="border-radius: 50%; width:15%" class="m-2 ">
@@ -20,7 +20,7 @@
 
 
     <!-- 限時優惠 -->
-     <div class="container-md">
+     <div class="container">
         <h4 class="mt-5">限時優惠</h4>
         <div class="d-flex mt-3">
             <div class="card position-relative">
