--- a/Swallab/login/order.html
+++ b/Swallab/login/order.html
@@ -71,7 +71,7 @@
                             <span class="number-span fs-20" id="number-span-1">0</span>
                             <button type="button" class="btn btn-sm btn-outline-secondary rounded-button" onclick="increment('number-span-1', 'price-1', 'total-price-1')">+</button>
                         </div>
-                        <span id="total-price-1" class="fs-20 ">$0</span>
+                        <span id="total-price-1" class="fs-20 total-price-forupdateSubtotal">$0</span>
                     </div>
                     <div class="col-md-1 d-flex align-items-center justify-content-center">
                         <button class="btn btn-link trash" onclick="removeProduct('product-row-1')"><i class="fas fa-trash-alt"></i></button>
@@ -94,7 +94,7 @@
                             <span class="number-span fs-20" id="number-span-2">0</span>
                             <button type="button" class="btn btn-sm btn-outline-secondary rounded-button" onclick="increment('number-span-2', 'price-2', 'total-price-2')">+</button>
                         </div>
-                        <span id="total-price-2" class="fs-20 ">$0</span>
+                        <span id="total-price-2" class="fs-20 total-price-forupdateSubtotal">$0</span>
                     </div>
                     <div class="col-md-1 d-flex align-items-center justify-content-center">
                         <button class="btn btn-link trash" onclick="removeProduct('product-row-2')"><i class="fas fa-trash-alt"></i></button>
@@ -117,7 +117,7 @@
                             <span class="number-span fs-20" id="number-span-3">0</span>
                             <button type="button" class="btn btn-sm btn-outline-secondary rounded-button" onclick="increment('number-span-3', 'price-3', 'total-price-3')">+</button>
                         </div>
-                        <span id="total-price-3" class="fs-20 ">$0</span>
+                        <span id="total-price-3" class="fs-20 total-price-forupdateSubtotal">$0</span>
                     </div>
                     <div class="col-md-1 d-flex align-items-center justify-content-center">
                         <button class="btn btn-link trash" onclick="removeProduct('product-row-3')"><i class="fas fa-trash-alt"></i></button>
