fixed path and modified insertMenu

--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -178,7 +178,7 @@
                     <!-- <div class="addOptionContainerBg" id="newForm"> -->
 
                     <!-- <form action="" method="post" enctype="multipart/form-data" id="editForm"> -->
-                    <form id="editForm">
+                    <form id="editForm" enctype="multipart/form-data">
                         <i id="myClose" class="fa-solid fa-xmark"></i>
                         <div class="addOptionContainer row container">
                             <div class="col">
