--- a/Swallab/foodNotes/author.html
+++ b/Swallab/foodNotes/author.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-         <nav class="navbar navbar-expand bg-primary sticky-top shadow bg-body rounded">
+        <nav class="navbar navbar-expand bg-primary sticky-top shadow bg-body rounded">
         <div class="container-fluid">
             <!-- LOGO -->
             <a class="navbar-brand ms-5" href="#">
@@ -81,7 +81,7 @@
    <div class="container p-0">
         <div class="row d-flex justify-content-center p-0 mt-5 mb-2">
             <!-- 個人資訊 -->
-            <img src="../images/other/winnie.webp" class="img-fluid col-4 p-0 headphoto"></img>
+            <img src="../images/other/winnie.webp" class="img-fluid col-4 p-0 headphoto"/>
             <div class="col-8 p-3">
                 <div class="d-flex justify-content-center align-items-center p-3">
                     <div  class="d-flex" style="gap:150px;">
@@ -125,7 +125,7 @@
             <div class="mt-5 mb-5 p-0">
                 <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-                        <img src="../images/hotpot/qinghj.jpg" alt="" class="col-5 m-4">
+                        <img src="../images/hotpot/qinghj.jpg" alt="" class="col-5 m-4"/>
                         <div class="col-7 d-flex align-items-center ">
                             <div class="p-4">
                                 <h4  class="mb-4">青花驕</h4>
@@ -144,7 +144,7 @@
 
                 <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-                        <img src="../images/hotpot/roudd.png" alt="" class="col-5 m-4">
+                        <img src="../images/hotpot/roudd.png" alt="" class="col-5 m-4"/>
                         <div class="col-7 d-flex align-items-center ">
                             <div class="p-4">
                                 <h4  class="mb-4">肉多多</h4>
@@ -158,7 +158,7 @@
 
                 <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-                        <img src="../images/bbq/wuma.jpg" alt="" class="col-5 m-4">
+                        <img src="../images/bbq/wuma.jpg" alt="" class="col-5 m-4"/>
                         <div class="col-7 d-flex align-items-center ">
                             <div class="p-4">
                                 <h4  class="mb-4">屋馬燒肉</h4>
@@ -195,7 +195,7 @@
 
     
     <!-- TOP按鈕 -->
-    <img src="../images/other/top.png" alt="" class="top" id="top">
+    <img src="../images/other/top.png" alt="" class="top" id="top"/>
 
     <footer>
         <div class="container mt-3">
@@ -203,7 +203,7 @@
         <div class="row justify-content-center">
             <!-- 左邊logo -->
             <div class="col-4">
-                <img src="../images/other/logo.jpg" class="logo" alt="">
+                <img src="../images/other/logo.jpg" class="logo" alt=""/>
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
