--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -83,7 +83,7 @@
         <div class="row p-0 title">
             <div class="col-8 p-0">
                 <div class="height500">
-                    <img src="" class="img-fluid newTitle">
+                    <img src="" class="img-fluid newTitle"/>
                     <div class="text-con">
                         <p class="ellipsis title" id="title1"></p>
                         <p></p>
@@ -94,7 +94,7 @@
             <div class="col-4 row p-0">
                 <div class="col-12">
                     <div class="img-con">
-                        <img src="" class="newTitle">
+                        <img src="" class="newTitle"/>
                         <div class="text-con">
                             <p class="ellipsis title" id="title2"></p>
                             <p></p>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-12">
                     <div class="img-con">
-                        <img src="" class="newTitle">
+                        <img src="" class="newTitle"/>
                         <div class="text-con">
                             <p class="ellipsis title" id="title3"></p>
                             <p></p>
@@ -151,31 +151,31 @@
 
 
         <!-- 側邊欄+店家3*4 -->
-        <div class="row align-items-start justify-content-center" style="margin-top: 8%;">
+        <div class="row align-items-start justify-content-center mt8" >
             <!-- 側邊欄 -->
             <div class="col-3 custom-ul sticky-top">
                 <div class="mb-2 mt-3 ">
-                    <img src="../images/other/hot.png" alt="" id="hot">
+                    <img src="../images/other/hot.png" alt="" id="hot"/>
                     <li>本週熱門</li>
                 </div>
                 <div class="mb-2 ">
-                    <img src="../images/other/hotpot.png" alt="" id="hotpot">
+                    <img src="../images/other/hotpot.png" alt="" id="hotpot"/>
                     <li>火鍋</li>
                 </div>
                 <div class="mb-2">
-                    <img src="../images/other/barbecue.png" alt="" id="bbq">
+                    <img src="../images/other/barbecue.png" alt="" id="bbq"/>
                     <li>燒肉</li>
                 </div>
                 <div class="mb-2"> 
-                    <img src="../images/other/ramen.png" alt="" id="ramen">
+                    <img src="../images/other/ramen.png" alt="" id="ramen"/>
                     <li>拉麵</li>
                 </div>
                 <div class="mb-2">
-                    <img src="../images/other/izakaya.png" alt="" id="beer">
+                    <img src="../images/other/izakaya.png" alt="" id="beer"/>
                     <li>居酒屋</li>
                 </div>
                 <div class="mb-2">
-                    <img src="../images/other/dessert.png" alt="" id="dessert">
+                    <img src="../images/other/dessert.png" alt="" id="dessert"/>
                     <li>甜點</li>
                 </div>               
             </div>
@@ -186,15 +186,15 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden" > 
                             <div class="card-body p-0">
-                                <!-- <a href="./demoHotpot.html"> -->
-                                    <img src="" alt="" class="img-fluid notesImage" >
-                                <!-- </a> -->
+                                <a href="./demoHotpot.html">
+                                    <img src="" alt="" class="img-fluid notesImage" />
+                                </a>
                             </div>
                             <div class="card-footer align-items-center">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -205,13 +205,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid  notesImage">
+                                <img src="" alt="" class="img-fluid  notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -221,13 +221,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -237,13 +237,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -253,13 +253,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -269,13 +269,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -285,13 +285,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -301,13 +301,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -317,13 +317,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -333,13 +333,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid  notesImage">
+                                <img src="" alt="" class="img-fluid  notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -349,13 +349,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -365,13 +365,13 @@
                     <div class="col-4 mb-4">
                         <div class="card overflow-hidden">
                             <div class="card-body p-0">
-                                <img src="" alt="" class="img-fluid notesImage">
+                                <img src="" alt="" class="img-fluid notesImage"/>
                             </div>
                             <div class="card-footer">
                                 <p class="ellipsis notesTitle"></p>
                                 <div class="fixed-bottom-center">
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <img src="../images/other/eye.png" alt="">
+                                        <img src="../images/other/eye.png" alt=""/>
                                         <p class="m-0 viewNumber"></p>
                                     </div>
                                 </div>
@@ -604,10 +604,10 @@
 
                 
     <!-- 新增食記按鈕 -->
-    <a href="https://www.google.com.tw/"><img src="../images/other/write.png" alt="" width="40" id="write"></a>
+    <a href="https://www.google.com.tw/"><img src="../images/other/write.png" alt="" width="40" id="write"/></a>
     
     <!-- TOP按鈕 -->
-    <img src="../images/other/top.png" alt="" class="top" id="top">
+    <img src="../images/other/top.png" alt="" class="top" id="top"/>
 
     <footer>
         <div class="container mt-3">
