--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -44,132 +44,14 @@
                     <h5><b>我的菜單</b></h5>
                     <p id="editMenu">新增</p>
                 </div>
-                <!-- <div class="menuListContainer row">
+                <div class="menuListContainer row">
                     <div class="col-2">分類</div>
                     <div class="col-2">圖片</div>
                     <div class="col-2">名稱</div>
                     <div class="col-2">價錢</div>
                     <div class="col-2">編輯</div>
-                    <div id="menuList">
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 丸子類</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/1.avif">
-                            </div>
-                            <div class="col-2">干貝三鮮丸 (6顆)</div>
-                            <div class="col-2">240</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 丸子類</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/2.avif">
-                            </div>
-                            <div class="col-2">干貝三鮮丸 (6顆)</div>
-                            <div class="col-2">240</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 丸子類</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/3.avif">
-                            </div>
-                            <div class="col-2">草蝦丸 (6顆)</div>
-                            <div class="col-2">130</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 丸子類</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/4.avif">
-                            </div>
-                            <div class="col-2">花枝丸 (6顆)</div>
-                            <div class="col-2">240</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 丸子類</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 丸子類/5.avif">
-                            </div>
-                            <div class="col-2">貢丸 (8顆)</div>
-                            <div class="col-2">110</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/1.avif">
-                            </div>
-                            <div class="col-2">花枝蝦漿 (150g)</div>
-                            <div class="col-2">230</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2"><img src="../images/火鍋/青花驕內頁/單點 火鍋料/2.avif"></div>
-                            <div class="col-2">飛魚卵福袋 (6顆)</div>
-                            <div class="col-2">150</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2"><img src="../images/火鍋/青花驕內頁/單點 火鍋料/3.avif"></div>
-                            <div class="col-2">黃金魚蛋 (10顆)</div>
-                            <div class="col-2">110</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/4.avif">
-                            </div>
-                            <div class="col-2">魚包蛋 (8顆)</div>
-                            <div class="col-2">130</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="myMenuList row">
-                            <div class="col-2">單點 火鍋料</div>
-                            <div class="col-2">
-                                <img src="../images/火鍋/青花驕內頁/單點 火鍋料/5.avif">
-                            </div>
-                            <div class="col-2">甜不辣 (6個)</div>
-                            <div class="col-2">100</div>
-                            <div class="col-2">
-                                <i class="fa-solid fa-pen"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-
-                    </div>
-                </div> -->
+                    <div id="menuList"></div>
+                </div>
 
 
                 <!-- 新增菜單 module -->
@@ -198,9 +80,9 @@
                                 </div>
                                 <div class="col-12">
                                     <h5>
-                                        <label for="classification">名&emsp;&emsp;稱 :&emsp;&emsp;</label>
+                                        <label for="foodName">名&emsp;&emsp;稱 : &emsp;&emsp;</label>
                                     </h5>
-                                    <input name="foodName">
+                                    <input name="foodName" id="foodName">
                                 </div>
                                 <div class="col-12">
                                     <h5>
@@ -210,16 +92,75 @@
                                         <option value="" disabled selected>請選擇...(動態)</option>
                                     </select>
                                 </div>
+                                <div class="col-12">
+                                    <h5>
+                                        <label for="addClass">新增分類 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <input id="addClass" name="addClass">
+                                </div>
                             </div>
                         </div>
-                        <div id="addElement"></div>
                         <div class="discountBtn">
-                            <input type="submit" value="存檔" id="editMenuBtn">
+                            <span id="submitResult"></span>
+                            <input type="submit" value="存檔" id="addMenuBtn">
                         </div>
                     </form>
 
                 </div>
+                <!-- 編輯/修改菜單 -->
+                <div class="addOptionContainerBg d-none" id="modifyFormCon">
+                    <!-- <div class="addOptionContainerBg" id="newForm"> -->
 
+                    <!-- <form action="" method="post" enctype="multipart/form-data" id="editForm"> -->
+                    <form id="modifyForm" enctype="multipart/form-data">
+                        <i id="myClose2" class="fa-solid fa-xmark"></i>
+                        <div class="addOptionContainer row container">
+                            <div class="col">
+                                <p id="myPhotoResult"></p>
+                                <!-- <p id="photoResult">
+                                    <img src="../images/background.webp" alt="">
+                                </p> -->
+                                <input type="file" name="myFoodPhoto" id="myFoodPhoto" accept="image/*">
+                            </div>
+                            <div class="col row">
+
+                                <div class="col-12">
+                                    <h5>
+                                        <label for="myFoodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <input type="number" name="myFoodPrice" id="myFoodPrice">
+                                </div>
+                                <div class="col-12">
+                                    <h5>
+                                        <label for="myFoodName">名&emsp;&emsp;稱 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <input name="myFoodName" id="myFoodName">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="discountBtn">
+                            <span id="mySubmitResult"></span>
+                            <input type="submit" value="存檔" id="modifyMenuBtn">
+                        </div>
+                    </form>
+
+                </div>
+                <!-- 刪除菜單 -->
+                <div class="addOptionContainerBg d-none" id="deleteFormCon">
+                <!-- <div class="addOptionContainerBg" id="deleteFormCon"> -->
+                    
+                    <form id="deleteForm" enctype="multipart/form-data">
+                        <i id="myClose3" class="fa-solid fa-xmark"></i>
+                        <div class="addOptionContainer row">
+                            <div class="col colBtn">取消</div>
+                            <div class="col colBtn">刪除</div>
+                        </div>
+                        <div class="discountBtn">
+                            <span id="deleteResult"></span>
+                        </div>
+                    </form>
+
+                </div>
 
 
             </div>
