--- a/Swallab/footer/footer.html
+++ b/Swallab/footer/footer.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Footer</title>
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../js/footer.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -23,27 +22,27 @@
             <!-- 左邊logo -->
             <div class="col-4 text-center"></div>
             <div class="col-2 justify-content-center">
-                <img src="../images/root/LOGO.jpg" class="logo" alt="">
+                <img src="../images/root/logo.jpg" class="logo" alt="">
+                <div class="text-center">
+                    <span class="rights text-nowrap">© 版權聲明</span>
+                </div>
             </div>
             <!-- 右邊三列 -->
-            <div class="col-2 justify-content-center">
-                <div class="row justify-content-center">
-                    <button class="btn btnFooter text-nowrap">找餐廳</button>
+            <div class="col-2">
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">找餐廳</a>
+                </div>
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">看食記</a>
                 </div>
                 <div class="row justify-content-center">
-                    <button class="btn btnFooter text-nowrap">看食記</button>
-                </div>
-                <div class="row justify-content-center text-center">
                     <!-- 二個 icon -->
-                    <a href="#" class="col-3">
+                    <a href="#" class="col-6 text-center">
                         <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
                     </a>
-                    <a href="#" class="col-3">
+                    <a href="#" class="col-6 text-center">
                         <i class="fa-brands fa-instagram"></i> <!-- instagram -->
                     </a>
-                    <div class="row justify-content-center text-center">
-                        <span>© 版權聲明</span>
-                    </div>
                 </div>
             </div>
             <div class="col-4 text-center"></div>
