--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../_css/root.css" rel="stylesheet">
-    <link href="../_css/nav.css" rel="stylesheet">
-    <link href="../_css/footer.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/root.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>HeadPage</title>
@@ -296,33 +299,41 @@
     <!-- Main_end -->
 
     <!-- Footer_begin -->
-    <footer class="container-fluid mt-3">
+    <footer class="myFooter mt-3">
         <!-- 左右二欄 -->
-        <div class="row justify-content-center mt-3">
+        <div class="row justify-content-center mt-3 container">
             <!-- 左邊logo -->
-            <div class="col-4">
-                <img src="../images/root/LOGO.jpg" class="logo" alt="">
+            <div class="col-4 text-center"></div>
+            <div class="col-2 justify-content-center">
+                <img src="../images/root/logo.jpg" class="logo" alt="">
+                <div class="text-center">
+                    <span class="rights text-nowrap">© 版權聲明</span>
+                </div>
             </div>
             <!-- 右邊三列 -->
-            <div class="col-4">
-                <div class="row">
-                    <button class="btn btn-outline-success">找餐廳</button>
+            <div class="col-2">
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">找餐廳</a>
                 </div>
-                <div class="row">
-                    <button class="btn btn-outline-success">看食記</button>
+                <div class="">
+                    <a class="btn btnFooter text-nowrap">看食記</a>
                 </div>
-                <div class="row justify-content-center text-center">
+                <div class="row justify-content-center">
                     <!-- 二個 icon -->
-                    <a href="#" class="col-6">FBICON<img src="" alt=""></a>
-                    <a href="#" class="col-6">IGICON<img src="" alt=""></a>
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-facebook"></i>  <!-- facebook -->
+                    </a>
+                    <a href="#" class="col-6 text-center">
+                        <i class="fa-brands fa-instagram"></i> <!-- instagram -->
+                    </a>
                 </div>
             </div>
-            <div class="row justify-content-center text-center">
-                <span>© 版權聲明</span>
-            </div>
+            <div class="col-4 text-center"></div>
         </div>
     </footer>
     <!-- Footer_end -->
+
+
     <!-- <script>
         // icon 替換 start
         function showPopup() {
