--- a/Swallab/myHistory/myHistory.html
+++ b/Swallab/myHistory/myHistory.html
@@ -147,14 +147,18 @@
                 <!-- <div id="sidebar" class="sidebar col-2 sticky-top text-center"> -->
                 <div id="sidebar" class="sidebar col-2 text-center">
                     <div class="col align-self-center">
-                        <a href="#" class="btn btn-outline-danger">
-                            <span>個人檔案</span></a>
-                        <a href="#" class="btn btn-outline-danger">
-                            <span>我的訂單</span></a>
-                        <a href="#" class="btn btn-outline-danger active">
-                            <span>歷史紀錄</span></a>
-                        <a href="#" class="btn btn-outline-danger">
-                            <span>發布食記</span></a>
+                        <a href="#" >
+                            <p>個人檔案</p>
+                        </a>
+                        <a href="#">
+                            <p>我的訂單</p>
+                        </a>
+                        <a href="#" class="active">
+                            <p>歷史紀錄</p>
+                        </a>
+                        <a href="#" >
+                            <p>發布食記</p>
+                        </a>
                     </div>
                 </div>
                 <!-- sidebar_end -->
