--- a/Swallab/foodNotes/author.html
+++ b/Swallab/foodNotes/author.html
@@ -52,13 +52,8 @@
                                 style="display: block; margin-left: 70%; margin-top: 1.5em; white-space: nowrap;">
                                 <img class="icon" src="../images/other/handshake.png" alt="">商務
                             </button>
-                            <button class="position-absolute translate-middle rounded-pill"
-                                style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap;">
-<<<<<<< HEAD
+                            <button class="position-absolute translate-middle rounded-pill" style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap;">
                                 <img class="icon" src="../images/other/disabledpeople.png" alt="">無障礙
-=======
-                                <img class="icon" src="../images/other/disabled-people.png" alt="">無障礙
->>>>>>> 1e994251adcf9c7e0134f819801ff9279668014d
                             </button>
                         </div>
                         <!-- 搜尋 icon = submit -->
@@ -85,11 +80,7 @@
    <div class="container p-0">
         <div class="row d-flex justify-content-center p-0 mt-5 mb-2">
             <!-- 個人資訊 -->
-<<<<<<< HEAD
             <img src="../images/other/winnie.webp" class="img-fluid col-4 p-0 headphoto"/>
-=======
-            <img src="../images/other/winnie.webp" class="img-fluid col-4 p-0 headphoto"></img>
->>>>>>> 1e994251adcf9c7e0134f819801ff9279668014d
             <div class="col-8 p-3">
                 <div class="d-flex justify-content-center align-items-center p-3">
                     <div  class="d-flex" style="gap:150px;">
@@ -166,11 +157,7 @@
 
                 <div class="d-flex justify-content-center mt-4 m-0">
                     <div class="row d-flex justify-content-center m-2 p-0 foodNotes-bg">
-<<<<<<< HEAD
                         <img src="../images/bbq/wuma.jpg" alt="" class="col-5 m-4"/>
-=======
-                        <img src="../images/bbq/wuma.jpg" alt="" class="col-5 m-4">
->>>>>>> 1e994251adcf9c7e0134f819801ff9279668014d
                         <div class="col-7 d-flex align-items-center ">
                             <div class="p-4">
                                 <h4  class="mb-4">屋馬燒肉</h4>
@@ -207,11 +194,8 @@
 
     
     <!-- TOP按鈕 -->
-<<<<<<< HEAD
     <img src="../images/other/top.png" alt="" class="top" id="top"/>
-=======
-    <img src="../images/other/top.png" alt="" class="top" id="top">
->>>>>>> 1e994251adcf9c7e0134f819801ff9279668014d
+
 
     <footer>
         <div class="container mt-3">
@@ -219,11 +203,7 @@
         <div class="row justify-content-center">
             <!-- 左邊logo -->
             <div class="col-4">
-<<<<<<< HEAD
                 <img src="../images/other/logo.jpg" class="logo" alt=""/>
-=======
-                <img src="../images/other/logo.jpg" class="logo" alt="">
->>>>>>> 1e994251adcf9c7e0134f819801ff9279668014d
             </div>
             <!-- 右邊三列 -->
             <div class="col-4">
