--- a/Swallab/backstage/set_info.html
+++ b/Swallab/backstage/set_info.html
@@ -30,32 +30,31 @@
             </div>
             <div class="col">
                 <h3 class="p-20">編輯餐廳資料</h3>
-                <div class="restaurantInfo">
-
+                <div class="restaurantInfo row">
                     <form action="" method="post" id="restaurantInfo">
                         <label for="restaurantName">
                             <h5>
                                 餐廳名稱 :
                             </h5>
-                            <input id="restaurantName">
+                            <input type="text" id="restaurantName">
                         </label><br>
                         <label for="restaurantTel">
                             <h5>
                                 電&emsp;&emsp;話 :
                             </h5>
-                            <input id="restaurantTel">
+                            <input type="text" id="restaurantTel">
                         </label><br>
                         <label for="restaurantAddress">
                             <h5>
                                 地&emsp;&emsp;址 :
                             </h5>
-                            <input id="restaurantAddress">
+                            <input type="text" id="restaurantAddress">
                         </label><br>
                         <label for="restaurantAvergae">
                             <h5>
                                 平均消費 :
                             </h5>
-                            <input id="restaurantAvergae">
+                            <input type="text" id="restaurantAvergae">
                         </label><br>
                         <label>
                             <h5>
