--- a/Swallab/login/writeBlogPost.html
+++ b/Swallab/login/writeBlogPost.html
@@ -5,11 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link href="../css/footer.css" rel="stylesheet">
+    <link href="../css/nav.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/writeBlogPost.css">
     <title>Write Blog Post</title>
 </head>
 <body>
-    <header>header</header>
+    <!-- NAV_begin : sticky-top -->
+    <nav class="navbar navbar-expand bg-primary sticky-top shadow bg-body rounded">
+        <div class="container-fluid">
+            <!-- LOGO -->
+            <a class="navbar-brand ms-5" href="#">
+                <img src="../images/root/LOGO.jpg" alt="" class="logo d-inline-block align-text-top">
+            </a>
+            <!-- 伸縮 -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="nav ms-0 me-5 row">
+                    <div class="nav-item col-6">
+                        <!-- 首頁沒有 active -->
+                        <!-- <a class="nav-link active" aria-current="page" href="#">Active</a> -->
+                        <a class="nav-link d-block" style="white-space: nowrap;" href="#">找餐廳</a>
+                    </div>
+                    <div class="nav-item col-6">
+                        <a class="nav-link d-block" style="white-space: nowrap;" href="#">看食記</a>
+                    </div>
+                </div>
+                <!-- Input 都在這 -->
+                <form class="ms-0 me-5" role="search" style="width: 100%;" name="search">
+                    <div class="d-flex container-fluid py-3">
+                        <!-- hover、click 換 icon -> src="./img/blog.png" -->
+                        <div class="theicon ms-5 mt-2 me-0" onmouseover="showPopup()" onmouseout="hidePopup()"
+                            style="width: 4em;">
+                            <!-- <img src="./img/restaurant.png" class="icon" alt=""> -->
+                            <div id="popup" class="popup">
+                                <div id="popupBlog" class="popupBlog"></div>
+                                <div id="popupRest" class="popupRest"></div>
+                            </div>
+                        </div>
+
+                        <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
+                        <div class="d-block container-fluid position-relative ms-2 m-0 p-0">
+                            <!-- 搜尋框 start -->
+                            <!-- <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search"> -->
+                            <div style="display: flex;" clas="container-fluid row">
+                                <div class="col-6">
+                                    <input type="text" id="myInput" onclick="myFunction()" placeholder="點擊我"
+                                        class="form-control m-0">
+                                    <!-- from 資料庫 -->
+                                    <div id="myDropdown" class="dropdown-content"
+                                        style="display: none; position: absolute;">
+                                        <a href="#cate_no" onclick="fillInput('null')"
+                                            class="position-relative">不挑分類</a>
+                                        <a href="#cate_hotpot" onclick="fillInput('火鍋')"
+                                            class="position-relative">火鍋</a>
+                                        <a href="#cate_bbq" onclick="fillInput('燒肉')" class="position-relative">燒肉</a>
+                                        <a href="#cate_izakaya" onclick="fillInput('居酒屋')"
+                                            class="position-relative">居酒屋</a>
+                                        <a href="#cate_ramen" onclick="fillInput('拉麵')" class="position-relative">拉麵</a>
+                                        <a href="#cate_dessert" onclick="fillInput('甜點')"
+                                            class="position-relative">甜點</a>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+
+                                    <input type="text" id="myInput2" onclick="myFunction2()" placeholder="點擊我"
+                                        class="form-control m-0 col-6">
+                                    <!-- from 資料庫 -->
+                                    <div id="myDropdown2" class="dropdown-content"
+                                        style="display: none; position: absolute;">
+                                        <a href="#loc_no" onclick="fillInput2('null')"
+                                            class="position-relative">不挑地區</a>
+                                        <a href="#loc_Taichung" onclick="fillInput2('台中市')"
+                                            class="position-relative">台中市</a>
+                                        <a href="#loc_1" onclick="fillInput2('選項2')" class="position-relative">選項2</a>
+                                        <a href="#loc_2" onclick="fillInput2('選項3')" class="position-relative">選項3</a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                            <!-- 搜尋框 end -->
+                            <button class="position-absolute translate-middle rounded-pill"
+                                style="display: block; margin-left: 10%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
+                                <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
+                            </button>
+                            <button class="position-absolute translate-middle rounded-pill"
+                                style="display: block; margin-left: 30%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
+                                <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
+                            </button>
+                            <button class="position-absolute translate-middle rounded-pill"
+                                style="display: block; margin-left: 50%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
+                                <img class="icon" src="../images/nav_icon/confetti.png" alt="">慶生
+                            </button>
+                            <button class="position-absolute translate-middle rounded-pill"
+                                style="display: block; margin-left: 70%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
+                                <img class="icon" src="../images/nav_icon/handshake.png" alt="">商務
+                            </button>
+                            <button class="position-absolute translate-middle rounded-pill"
+                                style="display: block; margin-left: 90%; margin-top: 1.5em; white-space: nowrap; z-index: 1;">
+                                <img class="icon" src="../images/nav_icon/disabled-people.png" alt="">無障礙
+                            </button>
+                        </div>
+                        <!-- 搜尋 icon = submit -->
+                        <input type="image" src="../images/nav_icon/loupe.png" class="icon mt-2 ms-0"
+                            onclick="document.search.submit()">
+                        <!-- <img src="./img/loupe.png" class="icon mt-2 ms-1" alt="" type="submit"> -->
+                    </div>
+                </form>
+                <!-- 登入及註冊按鈕 -->
+                <div class="ms-auto me-5">
+                    <a href="#" class="container-fluid">
+                        <button class="btn btn-outline-success btn-sm text-nowrap">登入/註冊</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- NAV_end -->
     <div class="container">
 
         <div class="row">
@@ -75,8 +189,37 @@
             </div>
         </div>
     </div>
+    <!-- Footer_begin -->
+    <footer class="container-fluid mt-3">
+        <!-- 左右二欄 -->
+        <div class="row justify-content-center mt-3">
+            <!-- 左邊logo -->
+            <div class="col-4">
+                <img src="../images/root/LOGO.jpg" class="logo" alt="">
+            </div>
+            <!-- 右邊三列 -->
+            <div class="col-4">
+                <div class="row">
+                    <button class="btn btn-outline-success">找餐廳</button>
+                </div>
+                <div class="row">
+                    <button class="btn btn-outline-success">看食記</button>
+                </div>
+                <div class="row justify-content-center text-center">
+                    <!-- 二個 icon -->
+                    <a href="#" class="col-6">FBICON<img src="" alt=""></a>
+                    <a href="#" class="col-6">IGICON<img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="row justify-content-center text-center">
+                <span>© 版權聲明</span>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer_end -->
     <script src="../js/jquery-3.7.1.js"></script>
-    
+    <script scr="../js/nav.js"></script>
+    <script scr="../js/footer.js"></script>
     <script src="../js/writeBlogPost.js"></script>
 </body>
 </html>
