--- a/Swallab/myHistory/myHistory.html
+++ b/Swallab/myHistory/myHistory.html
@@ -42,21 +42,20 @@
                     <div class="d-flex" style="width: 100%;">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
                         <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
-                            <div id="popup"
-                                class="popup row text-center d-flex align-items-center justify-content-center">
+                            <div id="popup" class="popup text-center d-flex align-items-center justify-content-center">
                                 <p><i id="showicon" class=""></i></p>
                             </div>
                             <div id="popupBR" class="popupBR">
-                                <div id="popupBlog" class="col-6 text-center">
+                                <div id="popupBlog" class="col-4 text-center">
                                     <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
                                 </div>
-                                <div id="popupRest" class="col-6 text-center">
+                                <div id="popupRest" class="col-4 text-center">
                                     <p><i class="fa-solid fa-utensils"></i></p>
                                 </div>
                             </div>
                         </div>
-
-
+                        
+                        
 
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
                         <div class="d-block position-relative m-0 p-0 col">
@@ -369,8 +368,8 @@
         </div>
     </footer>
     <!-- Footer_end -->
-    <script scr="../js/nav.js"></script>
-    <script scr="../js/footer.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
     <script src="../js/jquery-3.7.1.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
 </body>
