--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../css/root.css" rel="stylesheet">
-    <!-- <link href="../css/nav.css" rel="stylesheet"> -->
     <link href="../css/nav.css" rel="stylesheet">
     <link href="../css/footer.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -41,14 +40,14 @@
                     <div class="d-flex" style="width: 100%;">
                         <!-- hover、click 換 icon -> src="./img/blog.png" -->
                         <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
-                            <div id="popup" class="popup row text-center d-flex align-items-center justify-content-center">
+                            <div id="popup" class="popup text-center d-flex align-items-center justify-content-center">
                                 <p><i id="showicon" class=""></i></p>
                             </div>
                             <div id="popupBR" class="popupBR">
-                                <div id="popupBlog" class="col-6 text-center">
+                                <div id="popupBlog" class="col-4 text-center">
                                     <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
                                 </div>
-                                <div id="popupRest" class="col-6 text-center">
+                                <div id="popupRest" class="col-4 text-center">
                                     <p><i class="fa-solid fa-utensils"></i></p>
                                 </div>
                             </div>
