--- a/Swallab/backstage/ready_to_serve.html
+++ b/Swallab/backstage/ready_to_serve.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/backstage.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/root.css">
+    <script scr="../js/nav.js"></script>
     <title>Prepare</title>
 </head>
 <body>
-    <header>header</header>
+    <!-- NAV_begin : sticky-top -->
+    <nav class="navbar navbar-expand sticky-top shadow">
+        <div class="container">
+            <!-- LOGO -->
+            <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
+                <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
+            </a>
+            
+            <div class="ms-3 me-5 col-1">
+                <a href="#" class="">
+                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                </a>
+            </div>
+        </div>
+    </nav>
+    <!-- NAV_end -->
     <div class="container">
 
         <div class="row">
