--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -9,11 +9,29 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/backstage.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="../css/root.css">
+    <script scr="../js/nav.js"></script>
     <title>Management Menu</title>
 </head>
 
 <body>
-    <header>header</header>
+    <!-- NAV_begin : sticky-top -->
+    <nav class="navbar navbar-expand sticky-top shadow">
+        <div class="container">
+            <!-- LOGO -->
+            <a class="navbar-brand ms-5 col-1" href="../headpage/headpage.html">
+                <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
+            </a>
+            
+            <div class="ms-3 me-5 col-1">
+                <a href="#" class="">
+                    <button class="btn btn-sm btnLogin text-nowrap">登出</button>
+                </a>
+            </div>
+        </div>
+    </nav>
+    <!-- NAV_end -->
     <div class="container">
 
         <div class="row">
